apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-exporter
  template:
    metadata:
      labels:
        app: jellyfin-exporter
    spec:
      containers:
        - name: jellyfin-exporter
          image: rebelcore/jellyfin-exporter:v1.5.0
          imagePullPolicy: IfNotPresent
          args:
            - "--jellyfin.address=http://jellyfin.jellyfin:8096"
            - "--jellyfin.token=$(JELLYFIN_TOKEN)"
            - "--collector.activity"
          ports:
            - containerPort: 9594
              name: metrics
