apps/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-11
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        # Needed for hardware transcoding
        supplementalGroups: [ 44, 104 ]
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          image: ghcr.io/jellyfin/jellyfin:10.11.7
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 6000m
              memory: 6Gi
              gpu.intel.com/i915: 1
          ports:
            - containerPort: 8096
              protocol: TCP
              name: jellyfin-http
          volumeMounts:
            - mountPath: /data/media
              name: jellyfin-media
            - mountPath: /config
              name: jellyfin-config
            - name: jellyfin-cache
              mountPath: /cache
            - name: tmp
              mountPath: /tmp
      restartPolicy: Always
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-cache
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
        storageClassName: local-path
    - metadata:
        name: jellyfin-media
        annotations:
          nfs.io/storage-path: "jellyfin/"
      spec:
        accessModes: ["ReadWriteMany"]
        resources:
          requests:
            storage: 5Ti
        storageClassName: nfs-media-retain
    - metadata:
        name: jellyfin-config
        annotations:
          nfs.io/storage-path: "jellyfin/"
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: nfs-appdata-retain
        resources:
          requests:
            storage: 500Gi
