apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - jellyfin.home.alden.ai
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
    matches:
    - path:
        type: PathPrefix
        value: /
